<resources>
    <string name="app_name">Weather</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="additional_info">Additional Info</string>
    <string name="feels_like_temp">Feels Like %.1f °C</string>
    <string name="temperature_text">%.1f °C</string>
    <string name="wind_speed_text">%.1f m/sec</string>
    <string name="humidity_text">%.1f%%</string>
    <string name="visibility_text">%d m</string>
    <string name="uv_index_text">%.2f</string>
    <string name="uv">UV</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="_22_00">22:00</string>
    <string name="_6_00">6.00</string>
    <string name="_17_00">17:00</string>
    <string name="sunset">Sunset</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="upcoming_48_hour_temperature">Upcoming 48 hour Temperature</string>
    <string name="high_low_temp">↑ %.1f °C ↓ %.1f °C</string>
</resources>