<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".home.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Rajpara, Rajshahi"
        android:textColor="@color/colorOnSurface"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Rajpara, Rajshahi" />

    <ImageView
        android:contentDescription="@string/weather_icon"
        android:id="@+id/forecastIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_01d"
        tools:src="@drawable/ic_01d" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        tools:text="Haze"
        android:layout_below="@id/forecastIcon"/>

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weatherDescription"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorOnSurface"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:text="30.0 C" />

    <TextView
        android:id="@+id/feelsLikeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temperatureText"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        tools:text="Feels Like 35 C" />

    <RelativeLayout
        android:id="@+id/afternoonCard"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/feelsLikeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/afternoon_card">

        <TextView
            android:id="@+id/afternoonTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/_17_00"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/sunset"
            android:id="@+id/afternoonForecastIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/afternoonTimeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/ic_sunset"
            tools:srcCompat="@drawable/ic_sunset" />

        <TextView
            android:id="@+id/afternoonTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/afternoonForecastIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold"
            tools:text="27.0 C" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/morningCard"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/feelsLikeText"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/afternoonCard"
        android:background="@drawable/morning_card">

        <TextView
            android:id="@+id/morningTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/_6_00"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/morning"
            android:id="@+id/morningForecastIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/morningTimeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/ic_sunrise"
            tools:srcCompat="@drawable/ic_sunrise" />

        <TextView
            android:id="@+id/morningTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/morningForecastIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold"
            tools:text="22.0 C" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nightCard"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/feelsLikeText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/afternoonCard"
        android:background="@drawable/night_card">

        <TextView
            android:id="@+id/nightTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold"
            android:text="@string/_22_00" />

        <ImageView
            android:contentDescription="@string/night"
            android:id="@+id/nightForecastIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/nightTimeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/ic_night"
            tools:srcCompat="@drawable/ic_night" />

        <TextView
            android:id="@+id/nightTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nightForecastIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold"
            tools:text="23.0 C" />

    </RelativeLayout>

    <TextView
        android:id="@+id/additionalInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_info"
        android:textColor="@color/colorOnSurface"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/morningCard"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/additionalInfoTitle"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:rowCount="2"
        android:columnCount="4">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorOnSurface"
            android:text="@string/wind"/>

        <TextView
            android:id="@+id/windText"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="@color/colorOnSurface"
            android:text="@string/humidity"/>

        <TextView
            android:id="@+id/humidityText"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="@color/colorOnSurface"
            android:text="@string/visibility"/>

        <TextView
            android:id="@+id/visibilityText"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="@color/colorOnSurface"
            android:text="@string/uv"/>

        <TextView
            android:id="@+id/uvText"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-8dp"
        android:layout_alignTop="@+id/weatherChart"
        android:text="@string/upcoming_48_hour_temperature"
        android:textColor="@color/colorOnSurface"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/weatherChart"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:padding="0dp"/>

</RelativeLayout>